<resources>
    <string name="app_name">Drone Defence</string>
    <string name="bt_rationale">Bluetooth/Nearby Devices is needed for this app to work.</string>
    <string name="nearby_not_granted">Nearby Devices/Bluetooth/Wi-Fi permission must be granted for this app to work.</string>
    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_not_enabled_leaving">This application will not work without enabling Bluetooth.</string>
    <string name="wifi_not_enabled_leaving">This application will not work without enabling WiFi.</string>
    <string name="info">info</string>
    <string name="Clear">Clear</string>
    <string name="Help">Help</string>
    <string name="Log_enabled">Log enabled</string>
    <string name="Show_log_location">Show log location</string>
    <string name="coded_phy_not_supported">Coded Phy not supported</string>
    <string name="coded_phy_supported">Coded Phy supported</string>
    <string name="ea_not_supported">Extended Advertising not supported</string>
    <string name="ea_supported">Extended Advertising supported</string>
    <string name="nan_not_supported">WiFi NaN not supported</string>
    <string name="nan_supported">WiFi NaN supported</string>
    <string name="wifi_beacon_scan_not_supported">WiFi Beacon Scan not supported</string>
    <string name="wifi_beacon_scan_supported">WiFi Beacon Scan supported</string>
    <string name="Logging_to">Logging to </string>
    <string name="Logging_not_activated">Logging not activated</string>
    <string name="Map_Type">Map Type</string>
    <string name="Map_Type_Normal">Normal</string>
    <string name="Map_Type_Satellite">Satellite</string>
    <string name="Map_Type_Terrain">Terrain</string>
    <string name="Map_Type_Hybrid">Hybrid</string>
    <string name="Map_Type_None">None</string>
    <string name="copyright_osm">©https://www.openstreetmap.org/copyright contributors</string>
    <string name="permission_rationale_location">This application will not work without enabling location access.</string>
    <string name="permission_required_toast">Location permission is required for this application to work.</string>
    <string name="drone_icon_content_description">Drone icon</string>
    <string name="bluetooth_help_heading">Bluetooth</string>
    <string name="bluetooth_help_text">Sample</string>
    <string name="beacon_help_heading">Wi-Fi Beacon</string>
    <string name="beacon_help_text">Sample</string>
    <string name="nan_help_heading">Wi-Fi NaN</string>
    <string name="nan_help_text">Sample</string>
    <string name="Connection">Connection</string>
    <string name="unknown">–</string>
    <string name="RSSI">RSSI</string>
    <string name="MAC">MAC</string>
    <string name="Started">Started</string>
    <string name="Last_seen">Last seen</string>
    <string name="Msg_8710">Msg &#8710;</string>
    <string name="Distance">Distance</string>
    <string name="Basic_ID_1">Basic ID 1</string>
    <string name="Type">Type</string>
    <string name="ID_Type">ID Type</string>
    <string name="UAS_ID">UAS ID</string>
    <string name="Basic_ID_2">Basic ID 2</string>
    <string name="Location">Location</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Altitude_Press">Altitude Press.</string>
    <string name="Alt_Geod">Alt. Geod.</string>
    <string name="Direction">Direction</string>
    <string name="Status">Status</string>
    <string name="Hori_Speed">Hori. Speed</string>
    <string name="Vert_Speed">Vert. Speed</string>
    <string name="Height">Height</string>
    <string name="Height_Over">Height Over</string>
    <string name="Hori_Accuracy">Hori. Accuracy</string>
    <string name="Vert_Acc">Vert. Acc.</string>
    <string name="Baro_Acc">Baro Acc.</string>
    <string name="Speed_Acc">Speed Acc.</string>
    <string name="Time_Acc">Time Acc.</string>
    <string name="Timestamp">Timestamp</string>
    <string name="Self_ID">Self ID</string>
    <string name="Operation">Operation</string>
    <string name="System_Operator">System/Operator</string>
    <string name="Location_Type">Location Type</string>
    <string name="System_Altitude">Altitude</string>
    <string name="System_Latitude">Latitude</string>
    <string name="System_Longitude">Longitude</string>
    <string name="Area_Count">Area Count</string>
    <string name="Area_Radius">Area Radius</string>
    <string name="Area_Ceiling">Area Ceiling</string>
    <string name="Area_Floor">Area Floor</string>
    <string name="Classification">Classification</string>
    <string name="Category">Category</string>
    <string name="Class">Class</string>
    <string name="System_Timestamp">Timestamp</string>
    <string name="Operator_Info">Operator ID</string>
    <string name="Operator_ID">Operator ID</string>
    <string name="Authentication">Authentication</string>
    <string name="Auth_Type">Type</string>
    <string name="Auth_Length">Length</string>
    <string name="Auth_Timestamp">Timestamp</string>
    <string name="Auth_Data">Authentication</string>
    <string name="bluetoothHelp">All devices should be able to receive Bluetooth 4 Legacy Advertising remote ID signals.&lt;br&gt;&lt;br&gt;
        To receive Bluetooth 5 Long Range remote ID signals, the device must support the &quot;Coded Phy&quot; feature and also the &quot;Extended Advertising&quot; feature.&lt;br&gt;&lt;br&gt;
        See the claimed support for this device for these features in the options menu.&lt;br&gt;&lt;br&gt;
        Please be advised that even with those features supported, the device is not necessarily able to pick up the Long Range signals or it will only do that in limited time intervals.&lt;br&gt;</string>
    <string name="beaconHelp">All devices running Android 6 (Marshmallow) or newer should be able to receive Wi-Fi Beacon remote ID signals.&lt;br&gt;&lt;br&gt;
        The reception rate can vary a lot from one device to another, depending on the HW and SW.&lt;br&gt;&lt;br&gt;
        The reception rate for Wi-Fi Beacon remote ID signals can to some extent be improved by disabling Wi-Fi scan &lt;a href=&quot;https://developer.android.com/guide/topics/connectivity/wifi-scan#wifi-scan-throttling&quot;&gt;throttling&lt;/a&gt;.&lt;br&gt;&lt;br&gt;
        Enable the &lt;a href=&quot;https://developer.android.com/studio/debug/dev-options&quot;&gt;Android Developer Mode&lt;/a&gt; by opening the Settings application.&lt;br&gt;&lt;br&gt;
        Find the SW information (possibly in the &quot;About Phone&quot; menu) and click 7 times on the &quot;Build Number&quot;.&lt;br&gt;&lt;br&gt;
        Go back, find the &quot;Developer options&quot; menu, scroll to &quot;Wi-Fi scan throttling&quot; and disable it.&lt;br&gt;</string>
    <string name="nanHelp">Reception of Wi-Fi Neighbor-aware Network remote ID signals is possible only if the device has support for Wi-Fi NaN.&lt;br&gt;
        See the claimed support for this device for this feature in the options menu.&lt;br&gt;</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="error_password_missmatch">Password missmatch</string>
    <string name="button_user_register">Register</string>
    <string name="title_user_register">Create your free account</string>
    <string name="button_user_cancel">Cancel</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirmation">Password Confirmation</string>
    <string name="hint_email">Email</string>
    <string name="terms_of_use">I have read and agree to the Terms of Use, Acceptable Use Policy &amp; Privacy Policy</string>
    <string name="title_sign_in">Sign in to DroneDefence</string>
    <string name="title_user_sign_in">"Sign in to Drone Defence "</string>
    <string name="terms_of_use_sign_in">"By using AeroTracker, you are agreeing to the Terms of Use, Acceptable Use Policy &amp; Privacy Policy</string>
    <string name="title_create_account">Create free account</string>
    <string name="button_user_sign_in">Sign In\n</string>
    <string name="title_reset_password">Reset your password</string>
    <string name="button_user_reset_password">Reset Password</string>
    <string name="title_forgot_password">Forgot your password?</string>
    <string name="error_invalid_email_address">Invalid email address</string>
    <string name="error_invalid_password">Password must be at least 8 characters long and contain at least one uppercase letter and one symbol.</string>
    <string name="error_invalid_full_name">Name must not be empty</string>
    <string name="success_registration">Registration successful, Verify your email and Log in</string>
    <string name="error_sign_up_failed">Registration failed. Please try again.</string>
    <string name="error_please_accept_the_terms_and_conditions">Please accept the terms and conditions</string>
    <string name="error_short_sign_up_failed">"Registration failed: "</string>
    <string name="success_sign_in">Sign in successful</string>
    <string name="terms_privacy_policy">https://www.aerotracker.io/static/privacy-policy</string>
    <string name="terms_acceptable_policy">https://www.aerotracker.io/static/acceptable-use</string>
    <string name="terms_term_of_use">https://www.aerotracker.io/static/terms-of-use</string>
    <string name="error_sign_in">Error Login in, Register or Verify your email address if already registered</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_about">About</string>
    <string name="success_log_out">User Loged Out</string>
    <string name="error_log_out">Error while loging out, please try again</string>
    <string name="error_forgot_password">"Error sending email. Please try again. "</string>
    <string name="success_reset_email_sent">Reset email sent successful</string>
    <string name="title_app_name">Drone Defence</string>
    <string name="text_about">When used safely, drones are an excellent resource, providing additional eyes from above with added \nbenefits of thermal imaging etc. Drones are often an extremely useful and insightful tool. However, when \nused irresponsibly, drones can breach boundaries and cause nuisance, property violation, trespass or \nprivacy infringement.\nDrone Defence is here to alleviate these issues and we are committed to promoting and facilitating the \nsafe use of drones in authorised airspaces. Our products and technology solutions have been designed to \nsuit a wide variety of situations and environments</string>
    <string name="button_close">close</string>
    <string name="text_user_name">Name:</string>
    <string name="text_user_email">Email:</string>
    <string name="text_user_drone_range">Drone Range:</string>
    <string name="text_user_units">Units:</string>
    <string name="text_user_measurements">Measurements:</string>
    <string name="dialog_title_log_out_prompt">Are you sure you want to log out?</string>
    <string name="action_confirm">Yes</string>
    <string name="action_no">No</string>
    <string name="menu_change_url">Add URL</string>
    <string name="title_change_url">Change default URL</string>
    <string name="hint_url">http://yourendpoint.com/</string>
    <string name="title_default_url">Change back to default URL</string>
    <string name="action_change">Change</string>
    <string name="text_url_changed">URL changed</string>
    <string name="text_url_default">URL changed back to default</string>
    <string name="text_url_invalid">The URL entered is empty or not valid</string>
    <string name="title_change_detection_url">Change default detection URL</string>
    <string name="title_default_detection_url">Change back to default detection URL</string>
    <string name="hint_detection_url">http://yourdetectionendpoint.com/</string>
</resources>