<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2019 Intel Corporation

 SPDX-License-Identifier: Apache-2.0

!-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp"
            android:backgroundTint="@color/overcast">

            <TextView
                style="@style/Details.Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_help_heading"
                android:textSize="16sp"
                android:textColor="@color/sky"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/bluetoothHelpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_help_text"
                android:textSize="16sp"
                android:textColor="@color/midnight"/>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp"
            android:backgroundTint="@color/overcast">

            <TextView
                style="@style/Details.Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beacon_help_heading"
                android:textSize="16sp"
                android:textColor="@color/sky"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/beaconHelpText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beacon_help_text"
                    android:textSize="16sp"
                    android:textColor="@color/midnight"/>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:cardElevation="1dp"
            app:contentPadding="8dp"
            android:backgroundTint="@color/overcast">

            <TextView
                style="@style/Details.Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nan_help_heading"
                android:textSize="16sp"
                android:textColor="@color/sky"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/nanHelpText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nan_help_text"
                    android:textSize="16sp"
                    android:textColor="@color/midnight"/>
            </TableLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
