<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/midnight"
    android:padding="@dimen/dimen_16">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dialog_logo_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        android:src="@drawable/ic_logo_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dimen_16"
        android:padding="@dimen/dimen_8"
        android:text="@string/text_user_name"
        android:textColor="@color/paleSky"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_logo_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/dimen_8"
        android:text="@string/text_user_email"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/paleSky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_drone_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/dimen_8"
        android:text="@string/text_user_drone_range"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/paleSky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/dimen_8"
        android:text="@string/text_user_units"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/paleSky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_drone_range" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_measurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/dimen_8"
        android:text="@string/text_user_measurements"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/paleSky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_units" />


</androidx.constraintlayout.widget.ConstraintLayout>