<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16"
    android:background="@color/midnight">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/title_user_sign_in"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:textColor="@color/overcast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_8"
        android:hint="@string/hint_email"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_4"
        app:boxCornerRadiusBottomStart="@dimen/dimen_4"
        app:boxStrokeWidthFocused="@dimen/dimen_2"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:boxStrokeWidth="@dimen/dimen_0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            style="@style/BoxEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="@color/midnight"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_16"
        android:hint="@string/hint_password"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_4"
        app:boxCornerRadiusBottomStart="@dimen/dimen_4"
        app:boxStrokeWidthFocused="@dimen/dimen_2"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_email"
        app:boxStrokeWidth="@dimen/dimen_0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            style="@style/BoxEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_16"
            android:maxLines="1"
            android:textColor="@color/midnight"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/title_create_account"
        android:textColor="@color/sky"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/dimen_8"
        android:text="@string/title_forgot_password"
        android:textColor="@color/sky"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_terms_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/terms_of_use_sign_in"
        android:padding="@dimen/dimen_8"
        android:textColor="@color/paleSky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>